--- a/src/components/burgerBuilder/ingredient/ingredient.css
+++ b/src/components/burgerBuilder/ingredient/ingredient.css
@@ -6,10 +6,12 @@
 
 .ingredient div {
     width: 100%;
-    height: max-content;
+    height: 100px;
     margin: -60px 0;
 }
 
 .ingredient img {
-    width: 80%;
+    width: 350px;
+    height: 100%;
+    object-fit: fill;
 }
